--- a/style.css
+++ b/style.css
@@ -2,10 +2,57 @@
 * {
   box-sizing: border-box;
 }
+/* Variable global*/
+:root {
+  --primary: rgba(69, 83, 46, 0.664);
+  --black: rgb(43, 41, 41);
+}
 
 body {
-  background-color: rgba(85, 107, 47, 0.664);
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: var(--primary);
+  margin: 20px;
+  font-family: 'Roboto', sans-serif;
   font-size: 112, 5%;
   line-height: 1.4;
+  color: var(--black);
+}
+
+a {
+  color: white;
+  padding: 10px;
+  margin-bottom: 100px;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: var(--black);
+}
+
+ul {
+  list-style-type: none;
+}
+
+.image-flex {
+  width: 100%;
+  height: auto;
+}
+
+.facts {
+  grid-template-columns: 100px 50px 100px;
+  grid-template-rows: 80px auto 80px;
+  gap: 15px 10px;
+  justify-items: center;
+}
+
+.cv {
+  text-align: center;
+}
+
+.links-normal {
+  background-color: var(--primary);
+  padding: 0;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 112, 5%;
+  line-height: 1.4;
+  color: var(--black);
+  text-transform: none;
 }
