--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 /* Variable global*/
 :root {
-  --primary: rgba(69, 83, 46, 0.664);
+  --primary: rgba(109, 129, 76, 0.664);
   --black: rgb(43, 41, 41);
 }
 
@@ -13,21 +13,13 @@ body {
   color: var(--black);
   font-family: 'Roboto', sans-serif;
   line-height: 1.4;
-  margin: 20px;
+  padding: 10px;
+  margin: 0;
   width: 100vw;
 }
 
 nav {
-  margin-bottom: 20px;
-}
-
-a {
-  background-color: var(--black);
-  color: white;
-  margin-bottom: 100px;
-  padding: 10px;
-  text-decoration: none;
-  text-transform: uppercase;
+  margin: 20px 0;
 }
 
 img {
@@ -41,6 +33,15 @@ ul {
   padding: 0;
 }
 
+.navi-buttons {
+  background-color: var(--black);
+  color: white;
+  margin-bottom: 100px;
+  padding: 10px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
 .columns {
   display: flex;
   justify-content: flex-start;
@@ -52,17 +53,10 @@ ul {
   text-align: center;
 }
 
-.links-normal {
-  background-color: var(--primary);
-  padding: 0;
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  font-size: 112, 5%;
-  line-height: 1.4;
-  color: var(--black);
-  text-transform: none;
-}
-
 .extra-margin {
   margin-left: 80px;
+}
+
+.social-media {
+  width: 30px;
 }
