Change the font-family

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
 body {
   background-color: var(--primary);
   color: var(--black);
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   line-height: 1.4;
   margin: 0;
 }
