Add new file list.css/ components;  headline-styles and standard-margin in utility.css

--- a/styles/_utility.css
+++ b/styles/_utility.css
@@ -7,3 +7,15 @@ figcaption {
   font-size: 14px;
   margin-bottom: 20px;
 }
+
+.h1-50 {
+  margin-bottom: 50px;
+}
+
+.h2-18 {
+  font-size: 18px;
+}
+
+.m-20 {
+  margin-bottom: 20px;
+}
