--- a/style.css
+++ b/style.css
@@ -5,24 +5,7 @@
 @import 'styles/components/header.css';
 @import 'styles/components/navi.css';
 @import 'styles/_utility.css';
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-h1 {
-  margin-bottom: 50px;
-}
-
-h2 {
-  font-size: 18px;
-}
-
-.standard-margin {
-  margin-bottom: 20px;
-}
+@import 'styles/components/list.css';
 
 .navi-buttons {
   background-color: var(--primary);
