Make bio in bem-style

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 @import 'styles/components/navi.css';
 @import 'styles/_utility.css';
 @import 'styles/components/list-skills.css';
-@import 'styles/components/copytext-bio.css';
+@import 'styles/components/bio.css';
 @import 'styles/components/list-cv.css';
 @import 'styles/components/social-media.css';
 @import 'styles/components/footer.css';
