--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -1,4 +1,11 @@
-.contact-links {
+.footer__bg {
+  background-color: var(--content-color);
+  padding: 10px;
+  color: var(--content-text-color);
+  margin-bottom: 20px;
+}
+
+.footer__contact-links {
   border-bottom: 1px solid;
   color: var(--black);
   font-style: normal;
@@ -7,42 +14,40 @@
   color: var(--content-text-color);
 }
 
-.contact-flex {
+.footer__contact-flex {
   display: flex;
   justify-content: unset;
   align-items: center;
   flex-wrap: wrap;
 }
 
-.contact-icons {
+.footer__contact-icons {
   width: 30px;
 }
 
-.content-color {
-  background-color: var(--content-color);
-  padding: 10px;
-  color: var(--content-text-color);
-}
-
-.content-headline {
+.footer__headline-kontakt {
   margin-top: 0;
 }
 
-.impressum {
+.footer__h2 {
+  font-size: 18px;
+}
+
+.footer__impressum-h3 {
   font-size: 14px;
   margin: 20px 0 0;
 }
 
-.copyright {
+.footer__copyright {
   font-size: 12px;
 }
 
-.back-top {
+.footer__back-top {
   width: 30px;
   height: 30px;
 }
 
-.arrow-flex {
+.footer__arrow-flex {
   align-items: baseline;
   display: flex;
   justify-content: space-between;
