--- a/styles/components/list-cv.css
+++ b/styles/components/list-cv.css
@@ -2,14 +2,22 @@
   text-align: left;
 }
 
-.cv-dates {
+.cv__h2 {
+  font-size: 18px;
+}
+
+.cv__m-20 {
+  margin-bottom: 20px;
+}
+
+.cv__dates {
   font-size: 12px;
 }
 
-.cv-content {
+.cv__content {
   margin: 0;
 }
 
-.border-bottom {
+.cv__border-bottom {
   border-bottom: 1px solid var(--content-color);
 }
