--- a/styles/components/list-skills.css
+++ b/styles/components/list-skills.css
@@ -1,16 +1,24 @@
-ul {
+.skills__h2 {
+  font-size: 18px;
+}
+
+.skills__ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-.columns {
+.skills__columns {
   align-items: baseline;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
 }
 
-.flex-margin {
+.skills__flex-margin {
   margin-left: 40px;
+}
+
+.skills__m-20 {
+  margin-bottom: 20px;
 }
