--- a/styles/components/social.css
+++ b/styles/components/social.css
@@ -1,11 +1,15 @@
-.social-media {
+.social__h2 {
+  font-size: 18px;
+}
+
+.social__flex {
   align-items: center;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
 }
 
-.img-logos {
+.social__logos {
   height: 55px;
   width: 55px;
 }
